# assisted-service-mcp

./: .env.template  .gitignore  Dockerfile  Makefile  OWNERS  README.md  oauth-config.env  oauth.py  pyproject.toml  pyrightconfig.json  renovate.json  server.py  start-oauth-server.sh  template.yaml
.github/workflows/: mypy.yaml
.tekton/: assisted-service-mcp-pull-request.yaml  assisted-service-mcp-push.yaml  assisted-service-mcp-saas-main-pull-request.yaml  assisted-service-mcp-saas-main-push.yaml
assisted_service_mcp/: __init__.py
assisted_service_mcp/src/: __init__.py  api.py  logger.py  main.py  mcp.py  settings.py
assisted_service_mcp/src/metrics/: __init__.py
assisted_service_mcp/src/oauth/: __init__.py  manager.py  middleware.py  models.py  store.py  utils.py
assisted_service_mcp/src/service_client/: __init__.py  assisted_service_api.py  exceptions.py  helpers.py
assisted_service_mcp/src/tools/: __init__.py  cluster_tools.py  download_tools.py  event_tools.py  host_tools.py  network_tools.py  operator_tools.py  shared_helpers.py  version_tools.py
assisted_service_mcp/src/utils/log_analyzer/: __init__.py  log_analyzer.py  main.py
assisted_service_mcp/utils/: __init__.py  auth.py  client_factory.py  helpers.py
doc/: OAUTH_SETUP.md  example_prompts.md  oauth_authentication.md
integration_test/mock_server/: README.md  go.mod  mock_server.go
integration_test/performance/: README.md  performance_test.py  run_performance_test.sh
log_analyzer/: __init__.py  api_client.py  main.py
log_analyzer/signatures/: __init__.py  advanced_analysis.py  base.py  basic_info.py  error_detection.py  networking.py  performance.py  platform_specific.py
metrics/: __init__.py  metrics.py
scripts/: deploy_from_template.sh
service_client/: __init__.py  assisted_service_api.py  exceptions.py  helpers.py  logger.py  metrics.py  static_net.py
static_net/: config.py  template.py
tests/: template.yaml  test_advanced_analysis.py  test_assisted_service_api.py  test_auth.py  test_auth_priority.py  test_helpers.py  test_log_analyzer.py  test_metrics.py  test_oauth.py  test_oauth_integration.py  test_server.py  test_settings.py  test_static_net.py  test_tools_module.py  test_utils.py
tests/service_client/: test_assisted_service_api.py  test_service_client_api.py
tests/src/: test_api.py  test_logger.py  test_mcp.py  test_settings.py
tests/tools/: test_shared_helpers.py
tests/utils/: test_auth.py
tests/utils/log_analyzer/: test_log_analyzer.py
tests/utils/static_net/: test_static_net.py
(+40 files in other folders)
